package com.game.generators;

/**
 * Monster Factory class.
 * Creates monsters to place on the maze.
 */
public final class MonsterFactory {

    /**
     * MonsterFactory constructor.
     */
    private MonsterFactory() {}

    /**
     * createZombie function. Creates a Zombie Mob.
     */
    public static void createZombie() {}

    /**
     * createGhost function. Creates a Ghost Mob.
     */
    public static void createGhost() {}

    /**
     * createBoss function. Creates a Boss Mob.
     */
    public static void createBoss() {}

}
