@startuml Generators class diagram
title Generators class diagram

package Generators {

    package Probabilities {
        interface ItemProbas {
            getItemsProbasArray(): ItemProbas[]
            computeTotal(): float
            getValue(): float
            getNewItem(int x, int y): WorldItem
            getBaseSpawnProba(): float
            getMaxSpawningOccurrences(): int
        }

        enum PotionProbas {
            DUMMY
            STRENGTH
            SPEED
            HEALTH
            ==
            - {static} final float BASE_SPAWN_PROBA
            - final float value
            - final int maxOccurs
            ==
            + PotionProbas(float v, int maxOccurrs)
            + getItemsProbasArray(): ItemProbas[]
            + computeTotal(): float
            + getValue(): float
            + getNewItem(int x, int y): WorldItem
            + getBaseSpawnProba(): float
            + getMaxSpawningOccurrences(): int
        }

        enum WeaponProbas {
            DUMMY
            SWORD
            BOW
            AXE
            TRIDENT
            BOMB
            TEDDY
            ==
            - {static} final float BASE_SPAWN_PROBA
            - final float value
            - final int maxOccurs
            ==
            + WeaponProbas(float v, int maxOccurrs)
            + getItemsProbasArray(): ItemProbas[]
            + computeTotal(): float
            + getValue(): float
            + getNewItem(int x, int y): WorldItem
            + getBaseSpawnProba(): float
            + getMaxSpawningOccurrences(): int
        }

        ItemProbas <|.. PotionProbas
        ItemProbas <|.. WeaponProbas
    }


    class MazeFactory {
        + randomInt(int min, int max): int
        + static createMaze(): Maze
        + static createMaze(int: width, int: height, int:width): Maze
    }

    class MonsterFactory {
        + createZombie()
        + createGhost()
        + createBoss()
    }

    class PotionFactory {
        + createHealthPotion(int x, int y): HealthPotion
        + createStrenghPotion(int x, int y): StrengthPotion
        + createSpeedPotion(int x, int y): SpeedPotion
    }

    class WeaponFactory {
        + createSword(int x, int y): Sword
        + createBow(int x, int y): Bow
        + createAxe(int x, int y): Axe
        + createTrident(int x, int y): Trident
        + createBomb(int x, int y): Bomb
        + createTeddy(int x, int y): Teddy
    }

    class MonsterSpawner {
        + spawnMonsters(maze: Maze): Maze
    }

    class ItemSpawner {
        + spawnItems(maze: Maze): Maze
    }

    class TrapSpawner {
        + spawnTraps(maze: Maze)
        - {static} spawnWeapon(int x, int y, float randomFloat, ArrayList<WorldItem> items, Map<ItemProbas, Integer> spawnWeaponOccurrences)
        - canSpawnTrap(maze: Maze, int x, int y) : boolean
    }

    class PotionSpawner {
        + spawnPotions(maze: Maze)
        - {static} spawnPotion(int x, int y, float randomFloat, ArrayList<WorldItem> items, Map<ItemProbas, Integer> spawnPotionOccurrences)
        - canSpawnPotion(maze: Maze, int x, int y, SecureRandom sr) : boolean
    }

    package tree {
        class Leaf {
            int x
            int y
            int height
            int width
            Leaf left
            Leaf right
            + Leaf(int: x, int: y, int: width, int: height)
            - splitLeaves() : ArrayList<Leaves>
            - split(): boolean
            - canSplitH(): boolean
            - createRooms()
            - createCorridor(Rectangle l, Rectangle r)
            - addCorridorToLeaf(Vector2 pointForX, Vector2 pointForY, int rectangleWidth, int rectangleHeight)
            - exportToArray(Tile[] maze, int mazeHeight, int mazeWidth, int mazeDepth)
            + generateMazeArray(int width, int height, int depth, Vector3 spawnpoint): Tile[]
            + getRoom(): Rectangle
            + getLeft(): Leaf
            + getRight(): Leaf
        }
        class Rectangle {
            int x
            int y
            int width
            int height
            int bottom
            int top
            int left
            int right
            + Rectangle(int: x, int: y, int: width, int: height)
            + populateMazeWithRectangle(Tile[], int mazeHeight, int mazeWidth, int mazeDepth)
        }

        Leaf -- "*" Rectangle
    }
}

@enduml